--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ theme_mode:   # [light|dark]
 img_cdn: 'https://raw.githubusercontent.com/ConyersSchool/ConyersSchool.github.io/assets'
 
 # the avatar on sidebar, support local or CORS resources
-avatar: 'https://raw.githubusercontent.com/ConyersSchool/ConyersSchool.github.io/master/assets/img/92x92-removebg-preview%20(1).png'
+avatar: 'https://raw.githubusercontent.com/ConyersSchool/ConyersSchool.github.io/master/assets/img/favicons/cropped-conyers-logo%204-fotor-bg-remover-20230423134226.png'
 
 # boolean type, the global switch for ToC in posts.
 toc: true
