--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Nikky Leone
-  email: 20nleone@conyers.org.uk             # change to your email address
+  email: Example1.conyers@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link      
     - https://github.com/npmInicola90    # change to your github homepage
